# drf-online-education

./: .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/: settings.py  urls.py
coverage/: coverage-report.txt
dev/: .env.dev
fixtures/payment/: payment.json
payment/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
payment/management/commands/: fill.py
payment/migrations/: 0001_initial.py
postgres/: Dockerfile  init.sql
service/: admin.py  apps.py  models.py  paginators.py  serializers.py  services.py  tasks.py  urls.py  utils.py  validators.py  views.py
service/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_updated_at.py
service/tests/: test_course.py  test_lesson.py  test_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: cmg.py  createmoderator.py  csu.py  fill.py
users/migrations/: 0001_initial.py  0002_alter_user_city_alter_user_number.py  0003_payment.py  0004_payment_link_payment_session_id_alter_payment_user.py
